# reversi-cpp

./: .dockerignroe  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  build.bat  cmake.bat  docker-compose.yml  work.sln  work.vcxproj  work.vcxproj.filters
header/: AIPlayer.h  IPlayer.h  Input.h  InputPlayer.h  List.h  NetworkEntity.h  ReversiAI.h  ReversiBoard.h  ReversiGame.h  Stone.h  TurnState.h  cout.h
header/server/: NetworkEntity.h  ReversiClient.h  ReversiServer.h
resource/: build.bat  run.bat
src/: AIPlayer.cpp  Input.cpp  InputPlayer.cpp  NetworkEntity.cpp  ReversiAI.cpp  ReversiBoard.cpp  ReversiGame.cpp  main.cpp
src/reversi/private/: Input.cpp  ReversiGame.cpp
src/reversi/public/: IPlayer.h  Input.h  InputPlayer.h  ReversiAI.h  ReversiBoard.h
src/riversi/private/: AIPlayer.cpp  Input.cpp  InputPlayer.cpp  ReversiAI.cpp  ReversiBoard.cpp  ReversiGame.cpp
src/riversi/public/: AIPlayer.h  List.h  ReversiBoard.h  ReversiGame.h  Stone.h  TurnState.h
src/server/: NetworkEntity.cpp  ReversiClient.cpp  ReversiServer.cpp
src/winsoc/private/: MessageHandler.cpp  NetworkEntity.cpp  ReversiClient.cpp  ReversiServer.cpp  ReversiSessionManager.cpp  Sender.cpp  SessionInfo.cpp
src/winsoc/public/: ClientInfo.h  Message.h  MessageHandler.h  NetworkEntity.h  ReversiClient.h  ReversiServer.h  ReversiSessionManager.h  Sender.h  SessionInfo.h  Strings.h
